# 3dwire

./: .gitignore  README.md  pyproject.toml  train_transformer.py  train_vqvae.py
configs/: train_transformer.yaml  train_vqvae.yaml
src/data/: dataset.py
src/models/: __init__.py  modules.py  segment_vqvae.py  wf_transformer.py
src/train/: trainer_transformer.py  trainer_vqvae.py  utils.py
